- Made line height on headlines 1.3. #396 - Resolved vertical alignment on physical attributes #398 - Resolved navigation button size variations #366

--- a/src/components/Section/SectionView.scss
+++ b/src/components/Section/SectionView.scss
@@ -1,49 +1,71 @@
-.btn-container {
-	padding:2rem 8rem 0 4rem;
+@import 'eqip-colors';
 
-    button {
-		margin:0;
-        line-height: normal !important;
-        width:45%;
-        max-width:24rem;
-        min-width:10rem;
-        padding:2rem;
-        min-height:5.5rem;
-        transition:background-color 0.3s;
-	    &.next {
-	        float: right;
-	        clear:right;
-	    }
-	    &.back {}
-    }
-    .actions {
-        display: table;
-        width: 100%;
-        .direction {
-            font-weight: 600;
-        }
-        .text, .icon {
-            display: table-cell;
-            vertical-align: middle;
-        }
-        .icon {
-            width: 2.4rem;
-        }
-	    &.next {
-	        text-align: right;
-	    }
-	    &.back {
-	        text-align: left;
-	    }
-    }
+.btn-wrap {
+	display:table;
+	margin: 0 8rem 0 4rem;
+	width:calc(100% - 12rem);
 
-    .label {
-        font-weight: normal;
-        min-height: 2rem;
-    }
-}
-.top-btns {
 	.btn-container {
+// 		padding:2rem 8rem 0 4rem;
+		display:table-row;
+
+		.btn-cell,
+		.btn-spacer {
+			display:table-cell;
+			vertical-align:middle;
+		}
+	
+		.btn-cell {
+			width:40%;
+			border-radius:3px;
+			transition:background-color 0.3s;
+			background-color:$eapp-blue;
+			.next {
+				text-align:right;
+			}
+			&:hover {
+				background-color:$eapp-blue-dark;
+			}
+		    button {
+				margin:0;
+		        line-height: normal !important;
+		        width:100%;
+		        padding:2rem;
+				background:none;
+				&:hover {
+					background:none;
+				}
+			    .actions {
+			        display: table;
+			        width: 100%;
+			        .direction {
+			            font-weight: 600;
+			        }
+			        .text, .icon {
+			            display: table-cell;
+			            vertical-align: middle;
+			        }
+			        .icon {
+			            width: 2.4rem;
+			        }
+				    &.next {
+				        text-align: right;
+				    }
+				    &.back {
+				        text-align: left;
+				    }
+			    }
+			}
+	    }
+	    .label {
+	        font-weight: normal;
+	        min-height: 2rem;
+	    }
+	}	
+}
+
+.top-btns {
+	.btn-wrap {
 	    border-bottom:2px solid #e2e7ef;
 	    padding-top:7rem;
 	    padding-bottom: 7rem;
