--- a/src/views/Form/Form.scss
+++ b/src/views/Form/Form.scss
@@ -246,8 +246,8 @@
 
 				label {
 					position: relative;
-					margin-bottom:5.5rem;
-					height:7.4rem;
+					margin-bottom:4.3rem;
+					height:7.6rem;
 					min-width: 14rem;
 					cursor:pointer;
 
@@ -258,7 +258,7 @@
 					span {
 						display: block;
 						position: absolute;
-						top: 100%;
+						top: 8rem;
 						left: 0;
 						width: 100%;
 						line-height: 1.1;
